# angusforeman-MCP_SQL_Archivist

./: .env.template  .gitignore  MCP_DBv2_stdio.py  azureopenai_mcp_chat.py  mcp_logging_readme.md  model_params_readme.md  pyproject.toml  readme.md  system_prompt.txt
archivedb/: archive_metadata-examplefile.jsonl  archivedb.md  archivedbOLD.db  create_archivedb.py  import_to_archivedb.py  run_archivedb_query.py
audioindexer/: extract_metadata.py  readme.md
audioindexer/config/: patterns.yaml
