[project]
name = "mcplocal01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "mcp[cli]>=1.19.0",
    "mutagen>=1.47.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "tabulate>=0.9.0",
    "xmltodict>=1.0.2",
]
